Uploaded image for project: 'Qpid'
  1. Qpid
  2. QPID-2644

Console examples sometimes fail due to not waiting for the broker connection to complete

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Minor
    • Resolution: Fixed
    • 0.7
    • 0.7
    • QMF
    • None

    Description

      The 'ping' and 'console' examples in cpp/examples/qmf-console intermittently fail because they try to start operating against a broker that is not yet connected.

      Attachments

        Activity

          People

            tross Ted Ross
            tross Ted Ross
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: