QPID-2644 - Console examples sometimes fail due to not waiting for the broker connection to complete Moved 'Broker::waitForStable' from private to public, used this function in the examples to hold off until the broker is fully connected.

git-svn-id: https://svn.apache.org/repos/asf/qpid/trunk/qpid@951141 13f79535-47bb-0310-9956-ffa450edef68